parseGlinp/pddlParser.py
# Generated from pddl.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class pddlParser ( Parser ):

    grammarFileName = "pddl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'define'", "')'", "'domain'", 
                     "':requirements'", "':types'", "'-'", "'either'", "':functions'", 
                     "'number'", "':constants'", "':predicates'", "':constraints'", 
                     "':action'", "':parameters'", "':precondition'", "':effect'", 
                     "'and'", "'or'", "'not'", "'imply'", "'exists'", "'forall'", 
                     "':durative-action'", "':duration'", "':condition'", 
                     "'preference'", "'at'", "'over'", "'start'", "'end'", 
                     "'all'", "':derived'", "'when'", "'*'", "'+'", "'/'", 
                     "'>'", "'<'", "'='", "'>='", "'<='", "'assign'", "'scale-up'", 
                     "'scale-down'", "'increase'", "'decrease'", "'?duration'", 
                     "'problem'", "':domain'", "':objects'", "':init'", 
                     "':goal'", "':metric'", "'minimize'", "'maximize'", 
                     "'total-time'", "'is-violated'", "'always'", "'sometime'", 
                     "'within'", "'at-most-once'", "'sometime-after'", "'sometime-before'", 
                     "'always-within'", "'hold-during'", "'hold-after'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "REQUIRE_KEY", "NAME", "VARIABLE", "NUMBER", "LINE_COMMENT", 
                      "WHITESPACE", "DOMAIN", "DOMAIN_NAME", "REQUIREMENTS", 
                      "TYPES", "EITHER_TYPE", "CONSTANTS", "FUNCTIONS", 
                      "PREDICATES", "ACTION", "DURATIVE_ACTION", "PROBLEM", 
                      "PROBLEM_NAME", "PROBLEM_DOMAIN", "OBJECTS", "INIT", 
                      "FUNC_HEAD", "PRECONDITION", "EFFECT", "AND_GD", "OR_GD", 
                      "NOT_GD", "IMPLY_GD", "EXISTS_GD", "FORALL_GD", "COMPARISON_GD", 
                      "AND_EFFECT", "FORALL_EFFECT", "WHEN_EFFECT", "ASSIGN_EFFECT", 
                      "NOT_EFFECT", "PRED_HEAD", "GOAL", "BINARY_OP", "UNARY_MINUS", 
                      "INIT_EQ", "INIT_AT", "NOT_PRED_INIT", "PRED_INST", 
                      "PROBLEM_CONSTRAINT", "PROBLEM_METRIC" ]

    RULE_pddlDoc = 0
    RULE_domain = 1
    RULE_domainName = 2
    RULE_requireDef = 3
    RULE_typesDef = 4
    RULE_typedNameList = 5
    RULE_singleTypeNameList = 6
    RULE_r_type = 7
    RULE_primType = 8
    RULE_functionsDef = 9
    RULE_functionList = 10
    RULE_atomicFunctionSkeleton = 11
    RULE_functionSymbol = 12
    RULE_functionType = 13
    RULE_constantsDef = 14
    RULE_predicatesDef = 15
    RULE_atomicFormulaSkeleton = 16
    RULE_predicate = 17
    RULE_typedVariableList = 18
    RULE_singleTypeVarList = 19
    RULE_constraints = 20
    RULE_structureDef = 21
    RULE_actionDef = 22
    RULE_actionSymbol = 23
    RULE_actionDefBody = 24
    RULE_precondition = 25
    RULE_goalDesc = 26
    RULE_fComp = 27
    RULE_atomicTermFormula = 28
    RULE_term = 29
    RULE_durativeActionDef = 30
    RULE_daDefBody = 31
    RULE_daGD = 32
    RULE_prefTimedGD = 33
    RULE_timedGD = 34
    RULE_timeSpecifier = 35
    RULE_interval = 36
    RULE_derivedDef = 37
    RULE_fExp = 38
    RULE_fExp2 = 39
    RULE_fHead = 40
    RULE_effect = 41
    RULE_cEffect = 42
    RULE_pEffect = 43
    RULE_condEffect = 44
    RULE_binaryOp = 45
    RULE_binaryComp = 46
    RULE_assignOp = 47
    RULE_durationConstraint = 48
    RULE_simpleDurationConstraint = 49
    RULE_durOp = 50
    RULE_durValue = 51
    RULE_daEffect = 52
    RULE_timedEffect = 53
    RULE_fAssignDA = 54
    RULE_fExpDA = 55
    RULE_assignOpT = 56
    RULE_problem = 57
    RULE_problemDecl = 58
    RULE_problemDomain = 59
    RULE_objectDecl = 60
    RULE_init = 61
    RULE_initEl = 62
    RULE_nameLiteral = 63
    RULE_atomicNameFormula = 64
    RULE_goal = 65
    RULE_probConstraints = 66
    RULE_prefConGD = 67
    RULE_metricSpec = 68
    RULE_optimization = 69
    RULE_metricFExp = 70
    RULE_conGD = 71
    RULE_name = 72

    ruleNames =  [ "pddlDoc", "domain", "domainName", "requireDef", "typesDef", 
                   "typedNameList", "singleTypeNameList", "r_type", "primType", 
                   "functionsDef", "functionList", "atomicFunctionSkeleton", 
                   "functionSymbol", "functionType", "constantsDef", "predicatesDef", 
                   "atomicFormulaSkeleton", "predicate", "typedVariableList", 
                   "singleTypeVarList", "constraints", "structureDef", "actionDef", 
                   "actionSymbol", "actionDefBody", "precondition", "goalDesc", 
                   "fComp", "atomicTermFormula", "term", "durativeActionDef", 
                   "daDefBody", "daGD", "prefTimedGD", "timedGD", "timeSpecifier", 
                   "interval", "derivedDef", "fExp", "fExp2", "fHead", "effect", 
                   "cEffect", "pEffect", "condEffect", "binaryOp", "binaryComp", 
                   "assignOp", "durationConstraint", "simpleDurationConstraint", 
                   "durOp", "durValue", "daEffect", "timedEffect", "fAssignDA", 
                   "fExpDA", "assignOpT", "problem", "problemDecl", "problemDomain", 
                   "objectDecl", "init", "initEl", "nameLiteral", "atomicNameFormula", 
                   "goal", "probConstraints", "prefConGD", "metricSpec", 
                   "optimization", "metricFExp", "conGD", "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    REQUIRE_KEY=68
    NAME=69
    VARIABLE=70
    NUMBER=71
    LINE_COMMENT=72
    WHITESPACE=73
    DOMAIN=74
    DOMAIN_NAME=75
    REQUIREMENTS=76
    TYPES=77
    EITHER_TYPE=78
    CONSTANTS=79
    FUNCTIONS=80
    PREDICATES=81
    ACTION=82
    DURATIVE_ACTION=83
    PROBLEM=84
    PROBLEM_NAME=85
    PROBLEM_DOMAIN=86
    OBJECTS=87
    INIT=88
    FUNC_HEAD=89
    PRECONDITION=90
    EFFECT=91
    AND_GD=92
    OR_GD=93
    NOT_GD=94
    IMPLY_GD=95
    EXISTS_GD=96
    FORALL_GD=97
    COMPARISON_GD=98
    AND_EFFECT=99
    FORALL_EFFECT=100
    WHEN_EFFECT=101
    ASSIGN_EFFECT=102
    NOT_EFFECT=103
    PRED_HEAD=104
    GOAL=105
    BINARY_OP=106
    UNARY_MINUS=107
    INIT_EQ=108
    INIT_AT=109
    NOT_PRED_INIT=110
    PRED_INST=111
    PROBLEM_CONSTRAINT=112
    PROBLEM_METRIC=113

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PddlDocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(pddlParser.DomainContext,0)


        def problem(self):
            return self.getTypedRuleContext(pddlParser.ProblemContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_pddlDoc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPddlDoc" ):
                listener.enterPddlDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPddlDoc" ):
                listener.exitPddlDoc(self)




    def pddlDoc(self):

        localctx = pddlParser.PddlDocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pddlDoc)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.domain()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.problem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domainName(self):
            return self.getTypedRuleContext(pddlParser.DomainNameContext,0)


        def requireDef(self):
            return self.getTypedRuleContext(pddlParser.RequireDefContext,0)


        def typesDef(self):
            return self.getTypedRuleContext(pddlParser.TypesDefContext,0)


        def constantsDef(self):
            return self.getTypedRuleContext(pddlParser.ConstantsDefContext,0)


        def predicatesDef(self):
            return self.getTypedRuleContext(pddlParser.PredicatesDefContext,0)


        def functionsDef(self):
            return self.getTypedRuleContext(pddlParser.FunctionsDefContext,0)


        def constraints(self):
            return self.getTypedRuleContext(pddlParser.ConstraintsContext,0)


        def structureDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.StructureDefContext)
            else:
                return self.getTypedRuleContext(pddlParser.StructureDefContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)




    def domain(self):

        localctx = pddlParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(pddlParser.T__0)
            self.state = 151
            self.match(pddlParser.T__1)
            self.state = 152
            self.domainName()
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 153
                self.requireDef()


            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 156
                self.typesDef()


            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 159
                self.constantsDef()


            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 162
                self.predicatesDef()


            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 165
                self.functionsDef()


            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 168
                self.constraints()


            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pddlParser.T__0:
                self.state = 171
                self.structureDef()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(pddlParser.NameContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_domainName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainName" ):
                listener.enterDomainName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainName" ):
                listener.exitDomainName(self)




    def domainName(self):

        localctx = pddlParser.DomainNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_domainName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(pddlParser.T__0)
            self.state = 180
            self.match(pddlParser.T__3)
            self.state = 181
            self.name()
            self.state = 182
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequireDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRE_KEY(self, i:int=None):
            if i is None:
                return self.getTokens(pddlParser.REQUIRE_KEY)
            else:
                return self.getToken(pddlParser.REQUIRE_KEY, i)

        def getRuleIndex(self):
            return pddlParser.RULE_requireDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireDef" ):
                listener.enterRequireDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireDef" ):
                listener.exitRequireDef(self)




    def requireDef(self):

        localctx = pddlParser.RequireDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_requireDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(pddlParser.T__0)
            self.state = 185
            self.match(pddlParser.T__4)
            self.state = 187 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 186
                self.match(pddlParser.REQUIRE_KEY)
                self.state = 189 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==pddlParser.REQUIRE_KEY):
                    break

            self.state = 191
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedNameList(self):
            return self.getTypedRuleContext(pddlParser.TypedNameListContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_typesDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypesDef" ):
                listener.enterTypesDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypesDef" ):
                listener.exitTypesDef(self)




    def typesDef(self):

        localctx = pddlParser.TypesDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typesDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(pddlParser.T__0)
            self.state = 194
            self.match(pddlParser.T__5)
            self.state = 195
            self.typedNameList()
            self.state = 196
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedNameListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.NameContext)
            else:
                return self.getTypedRuleContext(pddlParser.NameContext,i)


        def singleTypeNameList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.SingleTypeNameListContext)
            else:
                return self.getTypedRuleContext(pddlParser.SingleTypeNameListContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_typedNameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedNameList" ):
                listener.enterTypedNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedNameList" ):
                listener.exitTypedNameList(self)




    def typedNameList(self):

        localctx = pddlParser.TypedNameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typedNameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 201
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 28)) & ~0x3f) == 0 and ((1 << (_la - 28)) & ((1 << (pddlParser.T__27 - 28)) | (1 << (pddlParser.T__28 - 28)) | (1 << (pddlParser.NAME - 28)))) != 0):
                    self.state = 198
                    self.name()
                    self.state = 203
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 205 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 204
                        self.singleTypeNameList()

                    else:
                        raise NoViableAltException(self)
                    self.state = 207 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 212
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 28)) & ~0x3f) == 0 and ((1 << (_la - 28)) & ((1 << (pddlParser.T__27 - 28)) | (1 << (pddlParser.T__28 - 28)) | (1 << (pddlParser.NAME - 28)))) != 0):
                    self.state = 209
                    self.name()
                    self.state = 214
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SingleTypeNameListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # R_typeContext

        def r_type(self):
            return self.getTypedRuleContext(pddlParser.R_typeContext,0)


        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.NameContext)
            else:
                return self.getTypedRuleContext(pddlParser.NameContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_singleTypeNameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleTypeNameList" ):
                listener.enterSingleTypeNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleTypeNameList" ):
                listener.exitSingleTypeNameList(self)




    def singleTypeNameList(self):
